welcome.lessons.welcome.bat.bool2.InOrderEqual.scala.error
inOrderEqual:8: error: illegal start of simple expression
    if (equalOk==true  && a==b|| equalOk==true && b==c)){
                                                       ^